--- a/leafy-frontend/nginx.conf
+++ b/leafy-frontend/nginx.conf
@@ -8,7 +8,7 @@ server {
     }
 
     location /api/ {
-        proxy_pass http://${BACKEND_HOST}:${BACKEND_PORT};
+        proxy_pass http://leafy-frontend:${BACKEND_PORT};
     }
 
     error_page   500 502 503 504  /50x.html;
